projects/examples/source/06.05.hpp
///////////////////////////////////////////

// chapter : Projects and Libraries

///////////////////////////////////////////

// section : Project Structure

///////////////////////////////////////////

// content : Project Structure
//
// content : Header Files
//
// content : Declarations and Definitions
//
// content : One Definition Rule
//
// content : Definitions in Header Files
//
// content : Global Objects
//
// content : Variable Declarations
//
// content : Storage Class Specifier extern
//
// content : Inline Variables
//
// content : Variable Specifier inline
//
// content : Header Guards

///////////////////////////////////////////

#ifndef HEADER_06_05

#define HEADER_06_05

///////////////////////////////////////////

#pragma once

///////////////////////////////////////////

#include <print>

///////////////////////////////////////////

void test_v1();

void test_v2();

///////////////////////////////////////////

// void test_v3() // error
// { 
//     std::print("test_v3\n");
// }

///////////////////////////////////////////

inline void test_v4()
{
    std::print("test_v4\n");
}

///////////////////////////////////////////

template < typename T > void test_v5()
{
	std::print("test_v5\n");
}

///////////////////////////////////////////

extern int       g_x1;

extern int       g_x2;

extern int const g_x3;

extern int const g_x4;

///////////////////////////////////////////

       int const g_x5 = 5;

inline int const g_x6 = 6;

///////////////////////////////////////////

#endif

///////////////////////////////////////////